# coincidence

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
report/: package.json  pnpm-lock.yaml  slides.md
src/coincidence/block/: types.py  types_test.py  utils.py  utils_test.py
src/coincidence/block/fixtures/: 000000.json  014275.hex  014275.json  019471.hex  019471.json  023273.hex  023273.json  032716.hex  032716.json  047015.hex  047015.json  054367.hex  054367.json  055670.hex  055670.json  070922.hex  070922.json  078054.hex  078054.json  078734.hex  078734.json  085469.hex  085469.json  088801.hex  088801.json  095224.hex  095224.json  101764.hex  101764.json  112926.hex  112926.json  123958.hex  123958.json  125845.hex  125845.json  153716.hex  153716.json  158213.hex  158213.json  166810.hex  (+160 more)
src/coincidence/crypto/: __init__.py  bech32.py  keypair.py  keypair_test.py  test_bech32.py  test_utils.py  utils.py  utils_test.py
src/coincidence/transaction/: test_types.py  types.py  types_test.py  utils.py  utils_test.py  vm.py  vm_test.py
src/coincidence/transaction/types/: common.py  common_test.py  opcode.py  opcode_test.py  script.py  script_test.py  transaction.py  transaction_test.py
src/coincidence/utxo/: dao.py  schema.py
tests/: test_utxo_sync.py  utxo_sync_test.py
