[project]
name = "coincidence"
version = "0.1.0"
description = "A Bitcoin implementation built from scratch for educational purposes."
authors = [{ name = "Mix", email = "32300164+mnixry@users.noreply.github.com" }]
dependencies = ["base58>=2.1.1", "cryptography>=44.0.0"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=6.0.0",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonPlatform = "All"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",      # Missing docstring
    "EM",      # flake8-errmsg 
    "TRY003",  # Avoid specifying long messages outside the exception class
    "ANN2",    # Missing return type annotation
    "PLC0414", # Import alias does not rename original package
    "D213",    # Multi-line docstring summary should start at the second line (conflict with D212)
    "D203",    # No blank lines allowed before class docstring (conflict with formatter)
    "COM812",  # Trailing comma missing (conflict with formatter)
    "ISC001",  # Trailing comma present (conflict with formatter)
]

[tool.ruff.lint.extend-per-file-ignores]
"**/test_*.py" = ["S101"] # Use of assert detected

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest --cov --cov-report=term-missing ."
format = "ruff format"
lint = "ruff check"

[tool.coverage.report]
exclude_also = [
    # Skip abstract methods
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    # Pytest
    "if __name__ == .__main__.:",
    "pytest\\.skip",
    "pytest\\.mark\\.skip",
]

[tool.coverage.run]
branch = true
omit = [
    "**/cli/*.py", # Skip the CLI coverage report
]
